--- a/src/EstateApp.Web/appsettings.json
+++ b/src/EstateApp.Web/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "AuthenticationConnection": "Server=(localdb)\\mssqllocaldb;Database=EstateAppDb;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "ApplicationConnection": "Server=(localdb)\\mssqllocaldb;Database=EstateAppDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "AuthenticationConnection": "Server=tcp:estateappveed.database.windows.net,1433;Initial Catalog=EstateAppDb;Persist Security Info=False;User ID=EstateAppAdmin;Password={#onungwed28};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "ApplicationConnection": "Server=tcp:estateappveed.database.windows.net,1433;Initial Catalog=EstateAppDb;Persist Security Info=False;User ID=EstateAppAdmin;Password={#onungwed28};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
 
   "Logging": {
